Delete exercises (#18)
* New endpoint : DELETE /api/bulk_delete_exercises

* Refactor internal structure

* Prepare API for /bulk_delete_tags side effects

* handle specific source files operations to other module

* DELETE /api/bulk_delete_exercises

* Put missing code

* Correct wrong package-lock.json
